# mlops_project

./: .dockerignore  .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yaml  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: python-package.txt  python-package.yaml
data/processed/: .gitignore  test.csv  test_.csv  train.csv
docker/mlflow_image/: Dockerfile
docker/model_service/: .env  Dockerfile
metadata/: download_config.json  download_tags.json  metadata_pollutants.yaml
notebooks/: AQI.ipynb  AQI_analysis.ipynb  AQI_draft.ipynb  FEDOT.ipynb  LSTM.ipynb
service/: Dockerfile  dataset.csv  ex.py  main.py  model.clf  requirements.txt
service/static/css/: style.css
service/templates/: index.html
src/: __init__.py
src/app/: .env  inference.py
src/data/: clean_data.py  data_loading.py  data_loading_historical.py  data_loading_updated.py  data_preprocessing.py  data_raw_merge.py  filter_data.py
src/features/: data_preprocessing.py  experiments.py
src/models/: evaluate.py  prepare_datasets.py  train.py
tests/: check_post_request.py  test_filter_data.py  test_post_request.py  test_updated_data.py
tests/data/: test_x.csv  tests.py
