[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = ""
authors = ["Xena"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^2.10.2"
pandas = "^1.4.2"
requests = "^2.27.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
