[tool.poetry]
name = "mlops_project"
version = "0.1.0"
description = ""
authors = ["Xena"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = {extras = ["s3"], version = "^2.10.2"}
pandas = "^1.4.2"
requests = "^2.27.1"
black = "^22.3.0"
flake8 = "^4.0.1"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
mlflow = "^1.26.0"
sklearn = "^0.0"
statsmodels = "^0.13.2"
python-dotenv = "^0.20.0"
unicorn = "^1.0.3"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
pytest = "^7.1.2"
great-expectations = "^0.15.7"
pre-commit = "^2.19.0"
xgboost = "^1.6.1"
jupyterlab = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
